[workspace]
resolver = "2"

members = [
    "greaheisl_emu",
    "greaheisl_lib", 
    "greaheisl_typeset",
    "greaheisl_bitvecimg",
    "greaheisl_async", 
    "greaheisl_button_processor",
]


[workspace.package]
version = "0.2.1"
edition = "2021"
authors = ["Bernhard Musch"]
readme = "../README.md"
repository = "https://github.com/bernhard-musch/greaheisl/"
license = "Apache-2.0 OR MIT"
rust-version = "1.75.0"