[package]
name = "greaheisl_async"
description = "simple async multitasking for single-core embedded devices"
keywords = ["no_std","embedded","multitasking","executor"]

version.workspace = true
edition.workspace = true
authors.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
default = ["std"]
std = []

[dependencies]
ambassador = "0.3.5"
pin-project = "1.1.3"