[package]
name = "greaheisl_bitvecimg"
description = "bitmapped 2D image represented in memory as bitvec"
keywords = ["no_std","embedded","bitmap","image","font"]

version.workspace = true
edition.workspace = true
authors.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
default = ["std"]
std = ["greaheisl_typeset/std"]
font = ["dep:greaheisl_typeset"]
fitzl_font = ["font"]

[package.metadata.docs.rs]
all-features = true

[dependencies.greaheisl_typeset]
version = "0.2.1"
path = "../greaheisl_typeset"
default-features = false
optional = true 

[dependencies.bitvec]
version = "1.0.1"
default-features = false