[package]
name = "greaheisl_button_processor"
description = "translates button state changes into events"
keywords = ["no_std","embedded","button","keyboard","event"]

version.workspace = true
edition.workspace = true
authors.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
default = ["std"]
std = ["greaheisl_async/std"]

[dependencies.greaheisl_async]
version = "0.2.1"
path = "../greaheisl_async"
default-features = false