[package]
name = "greaheisl_emu"
description = "runs the timer control library in an emulated environment on the console"
keywords = ["console"]

version.workspace = true
edition.workspace = true
authors.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]

# comment out the following line to link directly against the static C library
greaheisl_lib = { version = "0.2.1", path = "../greaheisl_lib" }

greaheisl_async = { version = "0.2.1", path = "../greaheisl_async" }
greaheisl_button_processor = { version = "0.2.1", path = "../greaheisl_button_processor" }

crossterm = "0.27.0"
chrono = "0.4.26"
num = "0.4.1"
anyhow = "1.0.74"
bitvec = {version = "1.0.1", default-features = false}
ambassador = "0.3.5"

# static_assertions = "1.1.0"
