[package]
name = "greaheisl_lib"
version = "0.2.0"
edition = "2021"
authors = ["Bernhard Musch"]
description = "Rust part of a timer control application on the Arduino UNO R4 Wifi"
readme = "../../readme.md"
repository = "https://github.com/bernhard-musch/greaheisl/"
license = "Apache-2.0/MIT"
keywords = ["no_std", "embedded", "ui"]
rust-version = "1.75.0"

[lib]
name = "greaheisl_lib"
crate-type = ["lib","staticlib"]

[features]
default = ["std"]
std = [
  "greaheisl_async/std",
  "greaheisl_button_processor/std",
  "greaheisl_bitvecimg/std",
]

[dependencies.greaheisl_async] 
version = "0.1.0" 
path = "../greaheisl_async" 
default-features = false

[dependencies.greaheisl_button_processor] 
version = "0.1.0" 
path = "../greaheisl_button_processor" 
default-features = false

[dependencies.greaheisl_bitvecimg] 
version = "0.1.0" 
path = "../greaheisl_bitvecimg" 
default-features = false
features = ["font","fitzl_font"] 

[dependencies]

variant_count = "1.1.0"
static_assertions = "1.1.0"
round_mult = "0.1.3"
static_cell = "1.2.0"
bitmask-enum = "2.2.2" 
ambassador = "0.3.5"
enum-iterator = "1.4.1"
blanket = "0.3.0"

[dependencies.bitvec]
version = "1.0.1"
default-features = false

[dependencies.num]
version = "0.4"
default-features = false

# embedded-alloc = "0.5.0"
# type_hash = "0.3.0" would be nice, but no no-std...
# musli = "0.0.55" does not compile, even no-std, due to missing AtomicI32
# maybe later postcard = "1.0.0"
# maybe later serde = { version = "1.0.*", default-features = false }
# async-trait = "0.1.74" better not; might incur memory allocation; let's wait for stabilization
# thiserror = "1.0"
# [dependencies.uuid]
# default-features = false



