[package]
name = "greaheisl_typeset"
version = "0.1.0"
edition = "2021"
authors = ["Bernhard Musch"]
description = "typesetting based on simple abstract definition of font and glyph"
readme = "../../readme.md"
repository = "https://github.com/bernhard-musch/greaheisl/"
license = "Apache-2.0/MIT"
keywords = ["font", "typography", "no_std", "embedded"]
rust-version = "1.75.0"

[features]
default = ["std"]
std = ["dep:blanket"]
doc-images = []


[dependencies]
blanket = {version = "0.3.0", optional = true}
embed-doc-image = "0.1.4"

[dependencies.num]
version = "0.4"
default-features = false

[package.metadata.docs.rs]
# instruct doc.rs to use our `doc-images` feature to
# render any images that we may have in inner attribute documentation.
features = ["doc-images"]