[package]
name = "greaheisl_typeset"
description = "typesetting based on simple abstract definition of font and glyph"
keywords = ["font", "typography", "no_std", "embedded"]
categories=["embedded","no-std","graphics"]

version.workspace = true
edition.workspace = true
authors.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
default = ["std"]
std = ["dep:blanket"]
doc-images = []


[dependencies]
blanket = {version = "0.3.0", optional = true}
embed-doc-image = "0.1.4"

[dependencies.num]
version = "0.4"
default-features = false

[package.metadata.docs.rs]
# instruct doc.rs to use our `doc-images` feature to
# render any images that we may have in inner attribute documentation.
features = ["doc-images"]